# oven

./: .gitignore  AGENTS.md  Cargo.toml  README.md  add_sys_test.py  add_tests3.py  clean.py  errors.json  fix_all.py  fix_all2.py  fix_app_errors.py  fix_app_errors2.py  fix_app_errors3.py  fix_catalog.py  fix_catalog_paths.py  fix_catalog_unwrap.py  fix_conv_id.py  fix_error.py  fix_error2.py  fix_error3.py  fix_final.py  fix_ids.py  fix_ids2.py  fix_mock.py  fix_orch_runner.py  fix_orch_runner_calls.py  fix_orch_runner_result.py  fix_runner.py  fix_runner2.py  fix_services.py  fix_services2.py  fix_strings.py  fix_summary.py  fix_system_prompt.py  fix_test.py  fix_test_build.py  fix_tests.py  fix_tool_executor.py  fix_tool_executor_final.py  fix_tool_executor_path.py  (+14 more)
.github/: contribution.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml
.github/workflows/: autofix.yml  bounty.yml  ci.yml  labels.yml  release-drafter.yml  release.yml  (+1 more)
benchmarks/: README.md
crates/forge_project_model/: Cargo.toml
crates/forge_project_model/src/: cache_partition.rs  commit_boundary.rs  context_adapter.rs  durable_vector_index.rs  eval.rs  evidence_replay.rs  extraction.rs  freshness.rs  indexer.rs  ingestion.rs  learning.rs  lexical.rs  lib.rs  offline_rerank.rs  policy.rs  producer.rs  render.rs  retrieval.rs  retrieval_plan.rs  status.rs  types.rs  util.rs  vector.rs
crates/forge_project_model/src/extraction/: call_graph.rs  cargo_metadata.rs  dependency.rs  range.rs  rust_symbols.rs
crates/forge_quality_runtime/: Cargo.toml
crates/forge_quality_runtime/src/: lib.rs  main.rs
crates/forge_quality_runtime/tests/: quality_runtime.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/src/: lib.rs  service.rs
crates/forge_ui_model/: Cargo.toml
crates/forge_ui_model/src/: lib.rs
docs/: auto-update-investigation.md  codex-context-window-probe-2026-04-30.md
scripts/: sync-upstream.sh
systemd/: forge-sync.service  forge-sync.timer
templates/: forge-doom-loop-reminder.md
(+337 files in other folders)
