[package]
name = "forge_project_model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
syn = { workspace = true, features = ["full", "parsing", "extra-traits", "visit"] }
toml_edit = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
